[project]
name = "voxray-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "litellm>=1.74.0.post1",
    "openai>=1.90.0",
    "python-multipart>=0.0.20",
    "twilio>=9.6.3",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
